Replace com.sun.javafx.scene.control.IntegerField

--- a/src/main/resources/fxml/CarEditView.fxml
+++ b/src/main/resources/fxml/CarEditView.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.sun.javafx.scene.control.*?>
+<?import de.htwsaar.prog3.carrental.util.fx.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
